--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./app.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
     <title>Timer</title>
   </head>
   <body>
-    <h1 id="text">This is a timer.</h1>
+    <div class="image">
+      <img src="./assets/bomb.png" alt="A BOMB" />
+      <h1 id="time" class="time">00:00:00</h1>
+    </div>
   </body>
 </html>
