Changed video and audio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     </div>
     <div id="explosion">
       <div class="overflow">
-        <video muted preload="auto" id="video" src="./assets/video.mkv"></video>
+        <video
+          muted
+          preload="auto"
+          id="video"
+          src="./assets/explosion.mp4"
+        ></video>
       </div>
     </div>
   </body>
