--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div id="timer">
         <img src="./assets/bomb.png" alt="A BOMB" />
         <h1 id="time" class="time">00:00:00</h1>
+        <p class="bottom-left">©Haisong Qi 2022</p>
+        <p class="bottom-right">For educational purposes only.</p>
       </div>
     </div>
     <div id="explosion">
