--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./app.js" defer></script>
     <link rel="stylesheet" href="./styles.css" />
-    <title>Timer</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>The Bomb Timer</title>
   </head>
   <body>
     <div class="overflow" id="timer-overflow">
